useSeparatedWXHeap should never be true when not on iOS https://bugs.webkit.org/show_bug.cgi?id=176190

Reviewed by JF Bastien.

If you set useSeparatedWXHeap to true on X86_64, and launch the jsc shell,
the process insta-crashes. Let's silently ignore that option and set it
to false when not on iOS.

* runtime/Options.cpp:
(JSC::recomputeDependentOptions):


Canonical link: https://commits.webkit.org/192853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221453 268f45cc-cd09-0410-ab3c-d52691b4dbfc